@@ -8,6 +8,7 @@ import java.util.Objects;
 import java.util.Scanner;
 import java.util.function.IntPredicate;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class ManualUserProvider implements IUserProvider {
@@ -125,7 +126,7 @@ public class ManualUserProvider implements IUserProvider {
 
         return IntStream.range(0, size)
                 .mapToObj(i -> readUserWithIndex(i + 1))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
